﻿namespace FurryFriends.BlazorUI.Client.Models.Clients;

public class BreedDto
{
    public int Id { get; set; }
    public string Name { get; set; } = string.Empty;
    // public string Description { get; set; } = string.Empty;
    // public int SpeciesId { get; set; }
    // public string SpeciesName { get; set; } = string.Empty;
}
