namespace FurryFriends.BlazorUI.Client.Models.Clients.Enums;

public enum ClientType
{
    Regular = 1,
    Premium,
    Corporate,
}
