namespace FurryFriends.Core.ClientAggregate.Enums;
public enum PetGender { Unknown, Male, Female }
